tests/bad/frontendErrors/iterateOverNonArrayError.latte
int main() {
	for (int x : 10) {
		
	}
	return 0;
}
